@@ -1,4 +1,4 @@
-/* gio-2.0.vapi generated by lt-vapigen, do not modify. */
+/* gio-2.0.vapi generated by vapigen, do not modify. */
 
 [CCode (cprefix = "G", lower_case_cprefix = "g_")]
 namespace GLib {
@@ -261,13 +261,11 @@ namespace GLib {
 	[CCode (cheader_filename = "gio/gio.h")]
 	public class FilterInputStream : GLib.InputStream {
 		public unowned GLib.InputStream get_base_stream ();
-		[NoAccessorMethod]
 		public GLib.InputStream base_stream { get; construct; }
 	}
 	[CCode (cheader_filename = "gio/gio.h")]
 	public class FilterOutputStream : GLib.OutputStream {
 		public unowned GLib.OutputStream get_base_stream ();
-		[NoAccessorMethod]
 		public GLib.OutputStream base_stream { get; construct; }
 	}
 	[Compact]
@@ -439,11 +437,8 @@ namespace GLib {
 		public void prepend_name (string iconname);
 		[CCode (type = "GIcon*", has_construct_function = false)]
 		public ThemedIcon.with_default_fallbacks (string iconname);
-		[NoAccessorMethod]
 		public string name { construct; }
-		[NoAccessorMethod]
 		public string[] names { get; construct; }
-		[NoAccessorMethod]
 		public bool use_default_fallbacks { construct; }
 	}
 	[Compact]
